<resources>
    <string name="app_name">ProyectoCompuMovil</string>

    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="forgotPassword">¿Olvidaste tu contraseña?</string>
    <string name="login">Iniciar sesión</string>
    <string name="resetPassword">Enviar contraseña</string>
    <string name="invitation"> Testeo</string>
    <string name="acept">He leído y acepto términos y condiciones</string>
    <string name="bar_title_terms">Terminos y condiciones de uso</string>

    <string name="empty_email">Introducir un email</string>
    <string name="invalid_email">Email inválido</string>

    <string name="google">Google</string>
    <string name="facebook">Facebook</string>

    <string name="terms1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sagittis odio sit amet tristique consectetur. Suspendisse potenti. Maecenas congue nunc in nisl elementum, id facilisis dui tempus. Nullam euismod turpis nec justo volutpat, eu facilisis odio accumsan. Proin ullamcorper purus non semper efficitur. Nullam at erat euismod, sagittis nisi a, maximus dui. Nam vel velit vel lorem scelerisque rutrum. Sed nec erat auctor, commodo urna a, facilisis erat. Integer nec tortor quis lectus dapibus malesuada.</string>
    <string name="terms2">Sed ultrices, tortor sit amet fermentum venenatis, nunc tortor feugiat quam, eu sollicitudin erat arcu sit amet ipsum. Vivamus vel aliquam quam, ut consequat nisi. Aenean aliquet arcu nec augue fringilla, vel finibus tellus cursus. Nunc ultrices luctus nisi, non interdum justo consequat nec. Etiam eleifend mi nisl, vel dapibus enim convallis id. Sed sit amet massa vitae est tincidunt iaculis. Nulla facilisi. Etiam sit amet nisi eget lectus varius luctus ac vitae nulla. Nullam vulputate arcu nec tortor feugiat tincidunt.</string>
    <string name="terms3">In in justo quis nunc sollicitudin laoreet. Donec non luctus velit. Nullam nec eros vel massa tincidunt venenatis. Sed convallis lorem quis purus sollicitudin, nec luctus enim dignissim. Suspendisse tincidunt tincidunt velit, nec vulputate ex. Ut malesuada volutpat neque, at sagittis dolor malesuada ut. Fusce dapibus semper turpis, ac facilisis nibh scelerisque a estoy añadiendo un poco más para que llegue al otro margen siuuuuu.</string>
    <string name="terms4">Nunc eleifend, orci a laoreet auctor, neque est finibus est, vel suscipit massa nisi nec erat. Suspendisse potenti. Suspendisse laoreet odio ligula, nec sagittis sem fermentum non. Sed pellentesque mauris ac odio ultricies dictum. Curabitur in bibendum velit. Etiam interdum mi vel risus scelerisque, eu bibendum quam ultrices. Vivamus vehicula lacus nec cursus laoreet. Sed condimentum malesuada eros, nec tempor nisl ullamcorper eu. Suspendisse eget nisi euismod, posuere lectus in, suscipit ligula. Integer non odio ac elit cursus luctus eu vel velit. Aenean rhoncus eu odio id luctus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Duis a velit volutpat, lobortis sapien eu, feugiat erat. Sed sit amet risus vestibulum, dapibus mi eget, convallis tellus. Fusce cursus orci sit amet eleifend malesuada. Nam hendrerit elit eu ipsum eleifend, nec vehicula sem tristique.</string>
    <string name="btnacept">Acepto</string>
    <string name="btncerrar">Cancelar</string>

    <string name="bar_title">Alegría Macarena</string>
    <string name="menu_running">Carreras</string>
    <string name="menu_record">Historial de carreras</string>
    <string name="menu_becamepremium">Hazte Premium</string>
    <string name="menu_clearpreferences">Reestablecer Ajustes</string>
    <string name="menu_signout">Cerrar Sesión</string>
    <string name="menu_offercourse">Testing</string>

    <string name="level">Nivel</string>
    <string name="nav_hi">Mueve las piernes, mueve el corazón</string>
    <string name="user">alfredQ}@gamil.com</string>


    <string name="navigation_drawer_open">Menu</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="bar_title_record">Historial de carrears</string>

    <string name="orderby_dateZA">Fecha (Recientes primero)</string>
    <string name="orderby_durationZA">Duración (Mayores primero)</string>
    <string name="orderby_distanceZA">Distancia (Mayores primero)</string>
    <string name="orderby_avgspeedZA">Vel. Prom. (Mayores primero)</string>
    <string name="orderby_maxspeedZA">Vel. Máx. (Mayores primero)</string>

    <string name="orderby_dateAZ">Fecha (Antiguos primero)</string>
    <string name="orderby_durationAZ">Duración (Menores primero)</string>
    <string name="orderby_distanceAZ">Distancia (Menores primero)</string>
    <string name="orderby_avgspeedAZ">Vel. Prom. (Menores primero)</string>
    <string name="orderby_maxspeedAZ">Vel. Máx. (Menores primero)</string>

    <string name="start">Iniciar recorrido</string>
    <string name="stop">Parar recorrido</string>
    <string name="finish">Finalizar</string>
    <string name="rounds">Ronda 1</string>
    <string name="time_running">Tiempo de carrera</string>
    <string name="time_walking">Tiempo de caminata</string>
    <string name="walking_clock">00:00</string>
    <string name="init_stop_watch_value">00:00:00</string>

    <string name="hard_volumen">Volumen de música de correr</string>
    <string name="soft_volumen">Volumen de música de descanso</string>
    <string name="notification_volumen">Volumen de Notificaciones</string>
    <string name="hard_position">00:00:00</string>
    <string name="hard_duration">01:00:00</string>
    <string name="soft_position">00:00:00</string>
    <string name="soft_duration">01:00:00</string>

    <string name="PopUpTotalRuns">Carrera: </string>
    <string name="PopUpTotalDistance">Kms acumulados: </string>
    <string name="PopUpTotalTime">Tiempo total: </string>
    <string name="NoDataWarning">No hay datos registrados. Recuerda activar el GPS si deseas información de tu carrera</string>

    <string name="PopUpDurationTitle">DURACION</string>
    <string name="PopUpChallengeTitle">OBJETIVO</string>
    <string name="PopUpIntervalTitle">INTERVALOS</string>
    <string name="PopUpDistanceTitle">DISTANCIA</string>
    <string name="PopUpAvgSpeedTitle">VELOCIDAD PROMEDIO</string>
    <string name="PopUpMaxSpeedTitle">VELOCIDAD MÁXIMA</string>
    <string name="PopUpUnevennessTitle">DESNIVEL</string>

    <string name="textNull"></string>
    <string name="textNoData">-</string>

    <string name="medalDistanceDescription">Distancia [Record Personal]</string>
    <string name="medalAvgSpeedDescription">Vel. Máx. [Record Personal]</string>
    <string name="medalMaxSpeedDescription">Vel. Prom. [Record Personal]</string>


</resources>